--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
             "email": "ggrachdev@yandex.ru"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "GGrach\\BitrixDebugger\\": "src/BitrixDebugger"
+        }
+    },
     "require": {}
 }
