Улучшен скелет, Writer вынесен в отдельную папку, добавлен набросок проверки режимов отображения через ShowModeValidator

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "GGrach\\BitrixDebugger\\": "src/BitrixDebugger"
+            "GGrach\\BitrixDebugger\\": "src/BitrixDebugger",
+            "GGrach\\Writer\\": "src/Writer"
         }
     },
     "require": {}
