Добавлен фильтратор, методы для фильтрации поступающих данных для дебага, для инициализации дебаг-бара как модуля и через подключение файлов теперь одна точка подключения всех данных

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "autoload": {
         "psr-4": {
             "GGrach\\BitrixDebugger\\": "src/BitrixDebugger",
-            "GGrach\\Writer\\": "src/Writer"
+            "GGrach\\Writer\\": "src/Writer",
+            "GGrach\\Filtrator\\": "src/Filtrator"
         }
     },
     "require": {}
